// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Carousel/PlayButton.PlayIcon should render an svg play icon with the fill #000 1`] = `
"

<svg
  data-testid="carousel-play-icon"
  xmlns="http://www.w3.org/2000/svg"
  viewBox="0 0 16 16"
  fill="currentcolor"
  width="16"
  height="16"
>
  <path
    fill="#000"
    stroke="#000"
    d="M11.596 8.697l-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"
  ></path></svg
>;
"
`;

exports[`components/Carousel/PlayButton.PlayIcon should render an svg play icon with the fill #fff 1`] = `
"

<svg
  data-testid="carousel-play-icon"
  xmlns="http://www.w3.org/2000/svg"
  viewBox="0 0 16 16"
  fill="currentcolor"
  width="16"
  height="16"
>
  <path
    fill="#fff"
    stroke="#fff"
    d="M11.596 8.697l-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"
  ></path></svg
>;
"
`;
